# ai-runner

./: AGENTS.md  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ai-runner-docker-batch-base.yaml  ai-runner-docker-batch-pipelines.yaml  ai-runner-docker-live-comfyui.yaml  ai-runner-docker-live-noop.yaml  ai-runner-docker-live-scope.yaml  ai-runner-docker-live-streamdiffusion.yaml  ai-runner-docker-scope.yaml  ai-runner-docker.yaml  ai-runner-live-pipelines-docker.yaml  ai-runner-models.yaml  ai-runner-noop-docker.yaml  ai-runner-pipelines-docker.yaml  ai-runner-test.yaml  comfyui-docker.yaml  comfyui-trigger.yaml  streamdiffusion-docker.yaml  validate-openapi-on-pr.yaml
docs/: custom-pipeline.md  development-guide.md  external-pipelines.md  pipeline-plugin-architecture.md  pipeline-separation-summary.md  streamdiffusion-cached-attention-update-2025-12-03.md  streamdiffusion-schema-and-features.md  streamdiffusion-schema-update-2025-11-25.md  streamdiffusion-schema-update.md
examples/external-pipeline-example/: README.md  pyproject.toml
examples/external-pipeline-example/src/example_pipeline/: __init__.py  params.py  pipeline.py
examples/v2v-configs/: sd15_multicontrol.yaml  sdturbo_multicontrol.yaml  sdxl_multicontrol.yaml
live/comfyui/: Dockerfile  pyproject.toml
live/pipelines/streamdiffusion/: Dockerfile  main.py  params.py  pipeline.py  pyproject.toml
live/scope/: Dockerfile
live/streamdiffusion/: Dockerfile  main.py
live/streamdiffusion/pipeline/: params.py  prepare.py
pipelines/comfyui-entrypoint/: README.md  pyproject.toml
pipelines/comfyui-entrypoint/src/comfyui_entrypoint/: __init__.py
pipelines/scope-entrypoint/: README.md  pyproject.toml
pipelines/scope-entrypoint/src/scope_entrypoint/: __init__.py
pipelines/streamdiffusion-entrypoint/: README.md  pyproject.toml
pipelines/streamdiffusion-entrypoint/src/streamdiffusion_entrypoint/: __init__.py
runner/: build.sh  build_tensorrt_internal.sh  dl_checkpoints.sh  gateway.openapi.yaml  gen_openapi.py  mypy.ini  openapi.yaml  pip-broken.txt  pyproject.toml  requirements.live-ai.txt  requirements.live.comfyui.txt  requirements.llm.in  requirements.streamdiffusion.txt  requirements.txt  run-lv2v.sh
runner/app/: app.py  main.py
runner/app/cfg/: uvicorn_logging_config.json
runner/app/live/: __init__.py  debug_tensors.py  infer.py  live_infer_app.py  log.py
runner/app/live/StreamDiffusionWrapper/: build_tensorrt.py  build_tensorrt_internal.sh  wrapper.py
runner/app/live/api/: __main__.py  api.py
runner/app/live/pipelines/: __init__.py  comfyui.py  comfyui_default_workflow.json  interface.py  loader.py  loading_overlay.py  noop.py  segment_anything_2.py  spec.py  streamdiffusion.py  streamdiffusion_params.py  streamdiffusion_processors_params.py  streamdiffusion_sd15_default_params.json  streamdiffusion_sdxl_default_params.json
runner/app/live/pipelines/comfyui/: pipeline.py
runner/app/live/pipelines/scope/: params.py  pipeline.py
runner/app/live/pipelines/streamdiffusion/: params.py  pipeline.py  prepare.py
runner/app/live/process/: loading_overlay.py  process.py  process_guardian.py
runner/app/live/streamer/: process.py  process_guardian.py  status.py  streamer.py
runner/app/live/streamer/protocol/: last_value_cache.py  protocol.py  trickle.py  zeromq.py
runner/app/live/trickle/: decoder.py  encoder.py  frame.py  media.py  trickle_publisher.py  trickle_subscriber.py
runner/app/live/utils/: __init__.py  comfy_utils.py
runner/app/pipelines/: audio_to_text.py  base.py  image_to_video.py  live_video_to_video.py  llm.py  text_to_speech.py
runner/app/pipelines/utils/: utils.py
runner/app/routes/: audio_to_text.py  health.py  live_video_to_video.py  llm.py  text_to_speech.py  upscale.py  utils.py  version.py
runner/app/tools/: prepare_models.py
runner/app/tools/scope/: prepare_models.py
runner/app/tools/streamdiffusion/: build_sd15_tensorrt.py  build_tensorrt.py  build_tensorrt_internal.sh
runner/app/utils/: errors.py  log.py
runner/docker/: Dockerfile  Dockerfile.audio_to_text  Dockerfile.live-app-comfyui  Dockerfile.live-app-noop  Dockerfile.live-app-scope  Dockerfile.live-app-streamdiffusion  Dockerfile.live-app-streamdiffusion-sd15  Dockerfile.live-app__PIPELINE__  Dockerfile.live-app__PIPELINE__-models-rtx-4090  Dockerfile.live-base  Dockerfile.live-base-comfyui  Dockerfile.live-base-scope  Dockerfile.live-base-segment_anything_2  Dockerfile.live-base-streamdiffusion  Dockerfile.llm  Dockerfile.segment_anything_2  Dockerfile.text_to_speech  Dockerfile.text_to_speech:chatterbox
runner/src/runner/live/process/: process.py
runner/src/runner/live/streamer/protocol/: trickle.py
tools/local-streamer/: go.mod  go.sum  main.go  output.go  segmenter.go  server.go
