[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example-pipeline"
version = "0.1.0"
description = "Example external pipeline for AI Runner"
requires-python = ">=3.10"
dependencies = [
    "ai-runner-base>=0.1.0",
]

[project.entry-points."ai_runner.pipeline"]
example-pipeline = "example_pipeline.pipeline:ExamplePipeline"

[project.entry-points."ai_runner.pipeline_params"]
example-pipeline = "example_pipeline.params:ExamplePipelineParams"

[tool.setuptools]
packages = ["example_pipeline"]

[tool.setuptools.package-dir]
"" = "src"

