[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamdiffusion-entrypoint"
version = "0.1.0"
description = "StreamDiffusion pipeline entrypoint for AI Runner"
requires-python = ">=3.10"
dependencies = [
    "ai-runner-base>=0.1.0",
    # StreamDiffusion is installed in the base Docker image, not via pip
]

[project.scripts]
streamdiffusion-runner = "streamdiffusion_entrypoint:main"

[tool.setuptools]
packages = ["streamdiffusion_entrypoint"]

[tool.setuptools.package-dir]
"" = "src"

